[package]
name = "learning-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
axum = { version = "0.6.16", features = ["multipart"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
