[package]
name = "learning-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
aws-sdk-sqs = "0.26.0"
aws-sdk-textract = "0.27.0"
axum = { version = "0.6.16", features = ["multipart"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
pbkdf2 = "0.12.1"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
axum-macros = "0.3.7"
anyhow = "1.0.71"
cookie = "0.17.0"
async-mongodb-session = "3.0.0"
async-session = "3.0.0"
axum-extra = { version = "0.7.4", features = ["typed-header"] }
oauth2 = "4.4.0"
http = "0.2.9"

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["sync"] 
